# depth_cov

./: CMakeLists.txt  README.md  package.xml
data/: 100cm.exr  160cm.exr  180cm.exr  200cm.exr  220cm.exr  240cm.exr  280cm.exr  300cm.exr  320cm.exr  340cm.exr  360cm.exr  440cm.exr  520cm.exr  560cm.exr  600cm.exr  620cm.exr  680cm.exr
data/depth/: 120cm.exr  140cm.exr  260cm.exr  380cm.exr  400cm.exr  420cm.exr  460cm.exr  480cm.exr  500cm.exr  540cm.exr  580cm.exr  60cm.exr  640cm.exr  660cm.exr  700cm.exr  80cm.exr
data/inv_depth/: inv_100cm.exr  inv_120cm.exr  inv_140cm.exr  inv_160cm.exr  inv_180cm.exr  inv_200cm.exr  inv_220cm.exr  inv_240cm.exr  inv_260cm.exr  inv_280cm.exr  inv_300cm.exr  inv_320cm.exr  inv_340cm.exr  inv_360cm.exr  inv_380cm.exr  inv_400cm.exr  inv_420cm.exr  inv_440cm.exr  inv_460cm.exr  inv_480cm.exr  inv_500cm.exr  inv_520cm.exr  inv_540cm.exr  inv_560cm.exr  inv_580cm.exr  inv_600cm.exr  inv_60cm.exr  inv_620cm.exr  inv_640cm.exr  inv_660cm.exr  inv_680cm.exr  inv_700cm.exr  inv_80cm.exr
jupyter/: draw_pt_distribute.ipynb  polyfit.ipynb  sum_gauss.ipynb
jupyter/.ipynb_checkpoints/: draw_pt_distribute-checkpoint.ipynb  polyfit-checkpoint.ipynb
results/new/: range
results/new/depth/test1/: metric
results/new/depth/test2/: metric
results/new/depth/test3/: metric
results/new/depth/test4/: metric
results/new/inv_depth/test1/: metric
results/new/inv_depth/test2/: metric
results/new/inv_depth/test3/: metric
results/new/inv_depth/test4/: metric
results/old/depth/test2/: Untitled Document
results/old/depth/test4/: Untitled Document
results/old/inv_depth/test1/: Untitled Document
results/old/inv_depth/test3/: Untitled Document
results/old/inv_depth/test4/: Untitled Document
results/train_test_result/test_d/: 10.exr  15.exr  20.exr  30.exr  quantitive result
results/train_test_result/test_inv_d/: 15.exr  5.exr  quantitive result
results/train_test_result/train_d/: 11.exr  12.exr  16.exr  22.exr  25.exr  26.exr  4.exr  5.exr  9.exr
results/train_test_result/train_depth/: 1.exr  13.exr  14.exr  17.exr  18.exr  19.exr  2.exr  21.exr  23.exr  24.exr  27.exr  28.exr  29.exr  3.exr  6.exr  7.exr  8.exr
results/train_test_result/train_inv_d/: 13.exr  14.exr  19.exr  21.exr  22.exr  26.exr  28.exr  30.exr  6.exr
results/train_test_result/train_inv_depth/: 1.exr  10.exr  11.exr  12.exr  16.exr  17.exr  18.exr  2.exr  20.exr  23.exr  24.exr  25.exr  27.exr  29.exr  3.exr  4.exr  7.exr  8.exr  9.exr
sample/depth/test1/: Untitled Document
sample/depth/test2/: Untitled Document
sample/depth/test3/: Untitled Document
sample/depth/test4/: Untitled Document
sample/inv_depth/test2/: Untitled Document
shell/: run_depth_cov.sh  run_depth_distribute.sh  run_inverse_depth_cov.sh  run_pt_distribute.sh  run_solve_lambda_folder.sh  run_solve_lambda_folder_inverse.sh
src/: depth_cov.cpp  depth_distribute.cpp  get_data.hpp  gmm_depth.cpp  gmm_inv_depth.cpp  grid_point_std.cpp  pt_distribute.cpp  solve_lambda.cpp  solve_lambda_folder.cpp  test_ceres.cpp  test_std.cpp
